# core

./: .gitignore  CMakeLists.txt  Makefile_template
cmake/: FindNETCDFF.cmake
mod/: module_constants.mod  module_deck.mod  module_error.mod  module_fftw3.mod  module_interp.mod  module_physical_constants.mod  module_prem.mod  module_quadrature.mod  module_random_fields.mod  module_special_functions.mod  module_spherical_harmonics.mod  module_spherical_model.mod  module_util.mod
src/: CMakeLists.txt  CMakeLists.txt~  Makefile  Makefile~  SRC  arraysize.f90  module_LAPACK.f90  module_PREM.f90  module_PREM_new.f90  module_SEM_1D.f90  module_constants.f90  module_error.f90  module_interp.f90  module_interpolation.f90  module_linalg.f90  module_quadrature.f90  module_random_fields.f90  module_special_functions.f90  module_spherical_harmonics.f90  module_spherical_mesh.f90  module_spherical_model_new.f90  module_util.f90  test_SEM_1D.f90  test_mesh.f90  test_random_field.f90
src/cmake/: FindFFTW3.cmake
src/tests/: test.f90  test_SEM_1D.f90  test_interp.f90  test_quadrature.f90  test_random_field.f90  test_spherical_model.f90
tests/: test_random_field.f90
